--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <title>Recipe Home</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-            th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}">
+          th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}">
 
     <script src="/webjars/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
@@ -30,19 +30,23 @@
                             <tr>
                                 <th>ID</th>
                                 <th>Description</th>
+                                <th>View</th>
                             </tr>
                             </thead>
                             <tr th:remove="all">
-                                <td th:text="${recipe.id}">123</td>
-                                <td th:text="${recipe.description}">Tasy Goodness 1</td>
+                                <td>123</td>
+                                <td>Tasy Goodness 1</td>
+                                <td><a href="#">View</a></td>
                             </tr>
                             <tr th:remove="all">
-                                <td th:text="${recipe.id}">456</td>
-                                <td th:text="${recipe.description}">Tasy Goodness 2</td>
+                                <td>456</td>
+                                <td>Tasy Goodness 2</td>
+                                <td><a href="#">View</a></td>
                             </tr>
                             <tr th:each="recipe :${recipes}">
                                 <td th:text="${recipe.id}">789</td>
                                 <td th:text="${recipe.description}">Tasy Goodness 3</td>
+                                <td><a href="#" th:href="@{'/recipe/show/' + ${recipe.id}}">View</a></td>
                             </tr>
                         </table>
                     </div>
