--- a/src/main/resources/templates/recipe/recipeform.html
+++ b/src/main/resources/templates/recipe/recipeform.html
@@ -17,6 +17,7 @@
             crossorigin="anonymous" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
 </head>
 <body>
+<!--/*@thymesVar id="recipe" type="com.okan.recipe.domain.Recipe"*/-->
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
@@ -40,7 +41,7 @@
                                     <input type="text" class="form-control" th:field="*{description}" th:errorclass="has-error"/>
                                     <span class="help-block" th:if="${#fields.hasErrors('description')}">
                                         <ul>
-                                            <li th:each="err : ${#fields.errors('description')}" th:text="${err}"></li>
+                                            <li th:each="err : ${#fields.errors('description')}" th:text="${err}"/>
                                         </ul>
                                     </span>
                                 </div>
@@ -71,7 +72,7 @@
                                     <input type="text" class="form-control" th:field="*{prepTime}" th:errorclass="has-error"/>
                                     <span class="help-block" th:if="${#fields.hasErrors('prepTime')}">
                                         <ul>
-                                            <li th:each="err : ${#fields.errors('prepTime')}" th:text="${err}"></li>
+                                            <li th:each="err : ${#fields.errors('prepTime')}" th:text="${err}"/>
                                         </ul>
                                     </span>
                                 </div>
@@ -81,7 +82,7 @@
                                     <input type="text" class="form-control" th:field="*{cookTime}" th:errorclass="has-error"/>
                                     <span class="help-block" th:if="${#fields.hasErrors('cookTime')}">
                                         <ul>
-                                            <li th:each="err : ${#fields.errors('cookTime')}" th:text="${err}"></li>
+                                            <li th:each="err : ${#fields.errors('cookTime')}" th:text="${err}"/>
                                         </ul>
                                     </span>
                                 </div>
@@ -108,7 +109,7 @@
                                     <input type="text" class="form-control" th:field="*{servings}" th:errorclass="has-error"/>
                                     <span class="help-block" th:if="${#fields.hasErrors('servings')}">
                                         <ul>
-                                            <li th:each="err : ${#fields.errors('servings')}" th:text="${err}"></li>
+                                            <li th:each="err : ${#fields.errors('servings')}" th:text="${err}"/>
                                         </ul>
                                     </span>
                                 </div>
@@ -122,7 +123,7 @@
                                     <input type="text" class="form-control" th:field="*{url}" th:errorclass="has-error"/>
                                     <span class="help-block" th:if="${#fields.hasErrors('url')}">
                                         <ul>
-                                            <li th:each="err : ${#fields.errors('url')}" th:text="${err}"></li>
+                                            <li th:each="err : ${#fields.errors('url')}" th:text="${err}"/>
                                         </ul>
                                     </span>
                                 </div>
@@ -154,6 +155,15 @@
                                         ' - ' + ingredient.getDescription())}">1 Teaspoon of Sugar
                                         </li>
                                     </ul>
+                                    <div th:each="ingredientEach, idx : ${recipe.ingredients}" >
+                                        <input  type="hidden" th:field="*{ingredients[__${idx.index}__].id}" />
+                                        <input  type="hidden" th:field="*{ingredients[__${idx.index}__].description}" />
+                                        <input  type="hidden" th:field="*{ingredients[__${idx.index}__].amount}" />
+                                        <input  type="hidden" th:field="*{ingredients[__${idx.index}__].uom.id}" />
+                                    </div>
+                                    <div th:each="catEach, idx : ${recipe.categories}" >
+                                        <input  type="hidden" th:field="*{categories[__${idx.index}__].id}" />
+                                    </div>
                                 </div>
                             </div>
                         </div>
